	- conditionals: s2c, s2s
	- perceptron, kernel perceptron
	- data types net, reg, stackentry access functions etc. don't forget to export whatever is mentioned in docs.
	- anatomy of a knet function.
	- structured learning
	- nce

	* TODO:
	0001 - update docs, remove dead code, update comments, check src TODO, - src/op/compound.jl: finish documentation for all ops.
	0001 example: character convolution models: its got good notation, lstm, conv, highway networks, language modeling... lm paper: github.com/yoonkim/lstm-char-cnn 1508.06615v4.pdf
	0003 - op/loss.jl: Fix/test all losses.  Update comments del l.y.  No need for forw.  Just loss, which returns loss and sets gradient.  Check tmp use avoid alloc.  Retire/fix logploss, xentloss, percloss, scalloss. -- src/op/loss.jl: cleanup, move out of op.
	0003 use templated code for cuda kernels
	0005 initforw: does not check sharing or read-before-write registers when cond/minibatch changes.
	0011 example: yonatan: language learning model
	0012 example: aliya: try bit representation on ipa
	0070 ai-mtg: kernels and perceptrons. kperceptron.jl: reimplement within the new framework. perceptron and structured perceptron examples. perclossback: these should be scaled 1/nx, why isn't our gradient check complaining? reimplement averaging. for perceptron.
	0100 example: barret: check on tur/uzb experiments. try pre-training for low resource mt: we can use rnnlm or copy, may need permutation matrix before encoder. work on pretraining for low resource translation using s2s or lm models.
	0101 example: many-to-one and one-to-many mt training.  mt models that fix the hidden state.  swapping input-output languages fixing the hidden state.  learning paraphrase models from mt models.
	0101 example: need something for turkish translation to report to tubitak
	0101 example: try s2s model in turkish translation: jonmay sent link to low density translation data.
	0102 example: yonatan supertagging