@@ -83,7 +83,7 @@
     {# SIDE NAV, TOGGLES ON MOBILE #}
     <nav data-toggle="wy-nav-shift" class="wy-nav-side">
       <div class="wy-side-nav-search">
-        <a href="https://github.com/denizyuret/Knet.jl"><img src="{{ pathto('_static/knet.svg', 1) }}" class="logo"></a>
+        <a href="https://github.com/denizyuret/Knet.jl"><img src="{{ pathto('_static/knet.png', 1) }}" class="logo"></a>
         <!--
         <a href="{{ pathto(master_doc) }}" class="fa fa-home"> {{ project }}</a>
         -->
